--- a/main.html
+++ b/main.html
@@ -6,10 +6,27 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<bod >
 	<!-- the entire body must be written by student -->
+	<table border="1">	
+		<tr>
+				<td>Roll number</td>
+			<td>Name</td>
+			</tr>
+			<tr>
+				<td></td>
+				<td></td>
+			</tr>
+		<tr>
+			<td></td>
+			<td></td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
+	
+		
+			
 
 </body>
 
