--- a/main.html
+++ b/main.html
@@ -6,17 +6,18 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<bod >
+<body>
 	<!-- the entire body must be written by student -->
 	<table border="1">	
 		<tr>
-				<td>Roll number</td>
-			<td>Name</td>
-			</tr>
-			<tr>
-				<td></td>
-				<td></td>
-			</tr>
+			<th>roll number</th>
+			<th> name</th>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			
+		</tr>
 		<tr>
 			<td></td>
 			<td></td>
